<resources>
    <string name="app_name">Laboratorio 12</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Elías Alvarado</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="correo_label">alv21808@uvg.edu.gt</string>
    <string name="mantener_sesion_activa">MANTENER SESIÓN ACTIVA</string>
    <string name="cerrar_sesion">CERRAR SESIÓN</string>
    <string name="success">Success</string>
    <string name="failure">FAILURE</string>
    <string name="empty">EMPTY</string>
    <string name="default_text">DEFAULT</string>
    <string name="ingreso_invalido">El correo y la contraseña ingresados son incorrectos.</string>

</resources>